# HyperCat

./: README.md  pyproject.toml
src/: __init__.py  gato.py  main.py
src/core/: __init__.py  base_gato.py  exceptions_custom.py  gato.py  hyper_cat.py
src/core/offline/: __init__.py  gato.py  hyper_cat.py
src/core/sockets/: __init__.py  base_socket.py  client.py  message_socket.py  server.py  type_status.py
src/enum/: casillas.py  resultado.py
src/enums/: __init__.py  colors.py  estado_casilla.py  resultado.py
src/network/: client.py  message_socket.py  server.py
src/test/: test_client.py  test_server.py
src/ui/: __init__.py  __init__py  cli.py  ventana.py  ventana_base.py  ventana_gato.py  ventana_hyper_cat.py
src/ui/offline/: __init__.py  ventana_gato.py  ventana_hyper_cat.py
