[project]
name = "HyperCat"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AntoCreed777", email = "anjebepu@gmail.com"},
]
dependencies = ["black>=25.12.0", "isort>=7.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
