[project]
name = "HyperCat"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AntoCreed777", email = "anjebepu@gmail.com"},
]
dependencies = ["black>=25.12.0", "isort>=7.0.0", "pydocstyle>=6.3.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["core"]
